WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
106850
REGRESSION(
r139681
): platform/mac/accessibility/progressbar.html fails on Mac
https://bugs.webkit.org/show_bug.cgi?id=106850
Summary
REGRESSION(r139681): platform/mac/accessibility/progressbar.html fails on Mac
Stephanie Lewis
Reported
2013-01-14 17:59:55 PST
http://build.webkit.org/results/Apple%20MountainLion%20Release%20WK2%20(Tests)/r139681%20(4804)/results.html
Failing on WK1 and WK2, Lion and Mountain Lion. Happened between
http://trac.webkit.org/changeset/139679
and
http://trac.webkit.org/changeset/139681
. results:
http://build.webkit.org/results/Apple%20MountainLion%20Release%20WK1%20(Tests)/r139681%20(5660)/platform/mac/accessibility/progressbar-pretty-diff.html
--- /Volumes/Data/slave/mountainlion-release-tests-wk1/build/layout-test-results/platform/mac/accessibility/progressbar-expected.txt +++ /Volumes/Data/slave/mountainlion-release-tests-wk1/build/layout-test-results/platform/mac/accessibility/progressbar-actual.txt @@ -6,7 +6,7 @@ PASS obj.intValue is 7 PASS obj.intValue is 0 -PASS obj.intValue is 7 +FAIL obj.intValue should be 7. Was 0. PASS obj.role is 'AXRole: AXProgressIndicator' PASS obj.intValue is 0 PASS obj.role is 'AXRole: AXProgressIndicator'
Attachments
Fixes the bug
(2.64 KB, patch)
2013-01-14 21:14 PST
,
Ryosuke Niwa
cfleizach
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Ryosuke Niwa
Comment 1
2013-01-14 19:04:57 PST
I'm investigating this issue but it's gonna take a while to build & run the test.
Ryosuke Niwa
Comment 2
2013-01-14 21:14:43 PST
Created
attachment 182694
[details]
Fixes the bug
chris fleizach
Comment 3
2013-01-14 23:26:05 PST
Comment on
attachment 182694
[details]
Fixes the bug thanks
Ryosuke Niwa
Comment 4
2013-01-15 00:31:51 PST
Committed
r139723
: <
http://trac.webkit.org/changeset/139723
>
Benjamin Poulain
Comment 5
2013-01-15 00:42:14 PST
Nice catch.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug