platform/mac/accessibility/progressbar.html fails on Mac WK1 and WK2 https://bugs.webkit.org/show_bug.cgi?id=106850

Reviewed by Chris Fleizach.

The bug was caused by some callers of supportsFocus directly calling that of Node.
Fixed the bug by calling HTMLElement's so that the virtual function on Element gets
called as needed.

* html/HTMLMeterElement.cpp:
(WebCore::HTMLMeterElement::supportsFocus):
* html/HTMLOutputElement.cpp:
(WebCore::HTMLOutputElement::supportsFocus):
* html/HTMLProgressElement.cpp:
(WebCore::HTMLProgressElement::supportsFocus):


Canonical link: https://commits.webkit.org/125109@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@139723 268f45cc-cd09-0410-ab3c-d52691b4dbfc